# habit-trackerv2

./: .env.dist  .gitignore  README.md  package-lock.json  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ab4f66389853_init.py  d16adc55dff2_add_user.py  e163d809e741_added_foreign_keys.py  f74f75609692_initial_tables.py
backend/app/: main.py
backend/app/core/: app.py  config.py  db.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  crud.py  dependencies.py  models.py  repo.py  repository.py  router.py  schemas.py  security.py
backend/app/modules/entries/: __init__.py  crud.py  dependencies.py  models.py  repo.py  repository.py  router.py  schemas.py
backend/app/modules/habits/: crud.py  dependencies.py  models.py  repo.py  repository.py  router.py  schemas.py
backend/app/modules/merged/: __init__.py  dependencies.py  router.py  schemas.py
backend/app/modules/users/: __init__.py  crud.py  dependencies.py  models.py  repo.py  repository.py  router.py  schemas.py
backend/app/utils/: dateutils.py  inits.py  mixins.py
backend/core/: config.py  database.py  dependencies.py  mixins.py  security.py
backend/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/user/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/core/config/: env.ts
frontend/src/core/providers/: query.tsx  router.tsx
frontend/src/core/store/: auth.store.tsx  calendar.store.tsx  index.tsx  theme.store.tsx  toast.store.tsx
frontend/src/features/auth/: api.ts  types.ts
frontend/src/features/common-pages/: welcome.tsx
frontend/src/modules/: router.tsx
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: config.dart  di.dart  theme.dart
lib/core/api/: api_client.dart  api_exception.dart
lib/core/storage/: storage_desktop.dart  storage_interface.dart  storage_mobile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+54 files in other folders)
