[project]
name = "habit-trackerv2-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AntonKochurka",email = "antonkotchurka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.3,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "ormparams (>=2.0.3,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
httpx = "^0.28.1"

